ZGC: Fix incorrect root iteration in ZHeapIterator

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P2
    • 12
    • Affects Version/s: 11, 12
    • Component/s: hotspot
    • gc
    • b16
    • Verified

      The ZHeapIterator should not make callbacks to the user supplied ObjectClosure while iterating over roots. Instead all roots should be pushed to the stack first, before any call to the user supplied ObjectClosure is made. This is needed since the user supplied ObjectClosure could otherwise modify the root set (e.g. the JVMTI TagMap) while we're iterating over it, which can lead to memory corruption.

            Assignee:
            Per Liden (Inactive)
            Reporter:
            Per Liden (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: