8212181: ZGC: Fix incorrect root iteration in ZHeapIterator

Reviewed-by: eosterlund